<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GamePlay">


    <TextView
        android:id="@+id/tvQuestionNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tvQuestionNumber"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentScore" />

    <TextView
        android:id="@+id/tvCurrentScore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tvCurrentScore"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tvSubmitAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tvSubmitAnswer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="318dp"
        android:layout_height="192dp"
        android:layout_marginTop="52dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion">

        <RadioButton
            android:id="@+id/aRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aRadio" />

        <RadioButton
            android:id="@+id/bRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bRadio" />

        <RadioButton
            android:id="@+id/cRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cRadio" />

        <RadioButton
            android:id="@+id/dRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dRadio" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tvQuestion"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tvQuestionNumber"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvQuestionNumber"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>